@@ -2,6 +2,7 @@ use 5.010;
 use Test2::V0 -no_srand => 1;
 use NewRelic::Agent::FFI::Procedural;
 use FFI::Platypus;
+use FFI::Platypus::Memory qw( strdup free );
 
 my $license_key = $ENV{NEWRELIC_AGENT_FFI_TEST};
 
@@ -39,6 +40,42 @@ subtest 'init' => sub {
   
   pass "didn't crash";
 
+};
+
+subtest 'newrelic_segment_datastore_begin' => sub {
+
+  my $tx = newrelic_transaction_begin;
+  ok $tx, 'newrelic_transaction_begin';
+
+  our $sql_in;
+  sub myobfuscator
+  {
+    ($sql_in) = @_;
+    note "myobfuscator($sql_in)";
+    my $sql_out = 'select * from users where password = ?';
+    state $ptr = 0;
+    free($ptr) if $ptr;
+    $ptr = strdup $sql_out;
+  }
+  
+  my $ffi = FFI::Platypus->new;
+  $ffi->type('(string)->opaque' => 'ob');
+  my $myobfuscator_closure = $ffi->closure(\&myobfuscator);
+  my $myobfuscator_ptr = $ffi->cast(ob => opaque => $myobfuscator_closure);
+  note "\$myobfuscator_ptr = $myobfuscator_ptr";
+  
+  my $seg = newrelic_segment_datastore_begin $tx, NEWRELIC_ROOT_SEGMENT, 'mytable', 'select', "select * from users where password = 'secret'", 'get_user_pw', $myobfuscator_ptr;
+  ok $seg, 'newrelic_segment_datastore_begin';
+
+  is $sql_in, "select * from users where password = 'secret'", 'myobfuscator called';
+  
+  sleep rand .5;
+  
+  my $status = newrelic_segment_end $tx, $seg;
+  is $status, 0, 'newrelic_segment_end';
+  
+  newrelic_transaction_end $tx;
+  ok 1, 'newrelic_transaction_end';
 };
 
 subtest 'newrelic_request_shutdown' => sub {
